# stepanov_tppl

./: LICENSE  README.md
average/: main  main.asm
best_program/: CMakeLists.txt  main.cpp  readme.md
best_program/src/: fs_real.hpp  interfaces.hpp  main.cpp  network_real.hpp  protocol.hpp  worker.hpp
best_program/tests/: integration.py  mock_server.py  unit_tests.cpp
cow/: CMakeLists.txt  cow.cpp  integration_tests.py  tests.cpp
cow/cow_examples/: 99.cow  99.txt  add.cow  fib.cow  hello.cow
interpreter/interpreter/: interpreter.py  token.py
interpreter/tests/: test_interppreter.py
pascal/: .gitignore  CMakeLists.txt  README.md
pascal/examples/: arithmetic.pas  bad_addition.pas  boolean_logic.pas  complex_math.pas  deep_scope.pas  empty.pas  feature_showcase.pas  nested.pas  string_ops.pas
pascal/include/: AST.h  AppConfig.h  Interpreter.h  Lexer.h  Parser.h  ScopedSymbolTable.h  SemanticAnalyzer.h  Token.h  Types.h
pascal/src/: AppConfig.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  SemanticAnalyzer.cpp  main.cpp
pascal/tests/: test_integration.cpp  test_main.cpp  test_types.cpp
plib/plib/: base.py
plib/tests/: test_point.py
tests/: test_point.py
text_analyzer/: lol.txt  main.py
